# rust-shop-api-demo

./: .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241206_041125_create_tables.rs
qrcodes/: README.md
src/: db.rs  main.rs
src/entities/: cart.rs  cart_item.rs  mod.rs  order.rs  order_item.rs  prelude.rs  product.rs  user.rs
src/handler/: cart_handler.rs  mod.rs  order_handler.rs  product_handler.rs  user_handler.rs
src/models/: mod.rs  prelude.rs  product.rs  user.rs
src/routes/: product_routes.rs  user_routes.rs
src/services/: cart_service.rs  mod.rs  order_service.rs  product_service.rs  service_error.rs  user_service.rs
src/utils/: actix_error.rs  jwt.rs  mod.rs  prompt_pay.rs
