[package]
name = "shop_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
validator = "0.19.0"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

