[package]
name = "shop_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
validator = {version ="0.19.0" , features = ["derive"] }
sea-orm = { version = "1.1.2", features = ["sqlx-postgres"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"  
sqlx = { version = "0.8.2", features = ["runtime-tokio"] }
argon2 = "0.5.3" 
sea-orm-migration = "1.1.2"
fmt = "0.1.0"


