[package]
name = "shop_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
validator = {version ="0.19.0" , features = ["derive"] }
sea-orm = { version = "1.1.2", features = ["sqlx-postgres","with-chrono","macros"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"  
sqlx = { version = "0.8.2", features = ["runtime-tokio"] }
argon2 = "0.5.3" 
sea-orm-migration = "1.1.2"
fmt = "0.1.0"
rust_decimal = "1.31.0"
jsonwebtoken = "9.3.0" 
tracing = "0.1.41"    # for logging
tracing-subscriber = "0.3.19"  # for handling log output
thiserror = "2.0.6"
qrcode = "0.14.1"
image = "0.25.5"
crc = "3.0.1"
log = "0.4.22"
env_logger = "0.11.5"



